# llm-foundry-simulator

./: .gitignore  CLAUDE.md  LICENSE  README.md  align_hf.py  compare_generate.py  pyproject.toml  reproduce.py  run.py  validate_align.py
configs/: align.yaml  align_hf.yaml  data.yaml  datagen.yaml  scaling.yaml  tokenize.yaml  train.yaml  train_2k.yaml  train_2k_lr1e3.yaml  train_2k_lr1e4.yaml  train_2k_lr5e4.yaml  train_demo.yaml  train_small.yaml
docs/: API.md  CODE_REFERENCE_COMPARISON.md  CODE_REVIEW.md  TRAINING_GUIDE.md  USAGE.md
docs/plans/: 2026-03-22-plan0-datagen.md  2026-03-22-plan1-scaffold-and-common.md  2026-03-22-plan2-tokenize-and-data.md  2026-03-22-plan3-train.md  2026-03-22-plan4-scaling.md  2026-03-22-plan5-align.md  2026-03-22-plan6-reproduce.md
llm_foundry/: __init__.py
llm_foundry/backends/: __init__.py  attention.py  attention_triton.py  inference.py
llm_foundry/common/: __init__.py  config.py  data.py  env_check.py  hashing.py  model.py  optimizer.py
llm_foundry/stage0_datagen/: __init__.py  client.py  datagen.py  grpo_gen.py  sft_gen.py
llm_foundry/stage1_tokenize/: __init__.py  binarize.py  pretokenize.py  tokenizer.py
llm_foundry/stage2_train/: __init__.py  attention_inject.py  distributed.py  trainer.py
llm_foundry/stage3_scaling/: __init__.py  fitting.py  (+4 more)
reproduce/: align.sh  data.sh  scaling.sh  tokenize.sh  train.sh  verify.py
scripts/: download_hf_data.py  download_openwebtext.py
tests/: test_attention.py  test_config.py  test_env_check.py  test_hashing.py  test_model.py  test_optimizer.py  test_stages.py
(+25 files in other folders)
